fix: scrollbar issue on alb view

--- a/front/scss/navigation/scrollbar.scss
+++ b/front/scss/navigation/scrollbar.scss
@@ -1,8 +1,6 @@
 /* scrollbar-container class is added to DOM target */
 .scrollbar-container {
-  --default-scroll-size: 18px;
   --scroll-color: rgb(155, 155, 155);
-  --scroll-size: 10px;
   --scroll-radius: calc(var(--scroll-size) / 2);
   --scroll-low-opacity: .2;
   --scroll-high-opacity: .8;
@@ -26,6 +24,7 @@
       height: 100%;
       overflow-x: hidden;
       overflow-y: auto;
+      width: calc(100% + var(--default-scroll-size));
     }
     /* Overflow hidden on y axis for horizontal scrollbar */
     .horizontal-scrollbar-content {
@@ -43,7 +42,7 @@
     cursor: pointer;
     opacity: var(--scroll-low-opacity);
     position: relative;
-    transition: opacity var(--scroll-transition-duration) ease-in-out, height var(--scroll-transition-duration);
+    transition: opacity var(--scroll-transition-duration) ease-in-out;
   }
   /* Vertical scrollbar, height is computed in Js according to scrollable content */
   .scroll {
