--- a/front/scss/tool/_variable.scss
+++ b/front/scss/tool/_variable.scss
@@ -48,7 +48,7 @@
 
   --default-scroll-size: 18px;
   --scroll-color: rgb(155, 155, 155);
-  --scroll-size: 10px;
+  --scroll-size: 8px;
   --scroll-radius: calc(var(--scroll-size) / 2);
   --scroll-low-opacity: .2;
   --scroll-high-opacity: .8;
